--- a/src/css/task.css
+++ b/src/css/task.css
@@ -98,7 +98,7 @@
     display: inline-block;
     vertical-align: top;
     width: 300px;
-    height: 500px;
+    height: auto;
     background-color: #fff;
 }
 #task_07-02 label,
@@ -113,4 +113,7 @@
 #task_07-02 hr {
     margin: 20px 0;
     border-color: #222;
+}
+#task_07-03 #map {
+    width: 100%;
 }
