--- a/src/css/task.css
+++ b/src/css/task.css
@@ -131,3 +131,11 @@
 #task_09-01 label {
     display: block;
 }
+
+#task_09-02 label {
+    display: block;
+    margin: 20px 0;
+}
+#task_09-02 input {
+    width: 200px;
+}
