--- a/src/css/task.css
+++ b/src/css/task.css
@@ -144,3 +144,16 @@
 #task_09-03 button {
     margin-top: 20px;
 }
+#task_11-01 {
+    background-color: #f90;
+}
+#task_11-01 > p {
+    text-align: center;
+}
+#task_11-01 > nav {
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 300px;
+    position: absolute;
+    bottom: 50px;
+    left: 20px;
+}
