--- a/src/css/task.css
+++ b/src/css/task.css
@@ -201,14 +201,16 @@
 }
 
 /* 13 */
-#task_13-01 input[type="search"] {
-    margin: 10px 0;
+#zodiacSearch {
+    margin: 20px 0;
 }
-#task_13-01 table {
+#zodiacTable, #addZodiacTable {
     border-collapse: collapse;
 }
-#task_13-01 table th,
-#task_13-01 table td {
+#zodiacTable th,
+#zodiacTable td,
+#addZodiacTable th,
+#addZodiacTable td {
     border: 1px solid #fff;
     padding: 10px 20px;
 }
