--- a/src/css/task.css
+++ b/src/css/task.css
@@ -217,3 +217,6 @@
 #zodiacTable tr:hover {
     background-color: #f90;
 }
+#zodiacTable .zodiacRemoveBtn:hover {
+    background-color: rgba(255, 255, 255, 0.3);
+}
