--- a/src/ejs/13-05/index.ejs
+++ b/src/ejs/13-05/index.ejs
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <%
 var baseUrl = '../';
-var task = '13-04';
+var task = '13-05';
 %>
 <html>
 <%- include(baseUrl + 'base.ejs', {parts: 'head', data: data, page: {task: task}}) %>
 <body>
-  <%- include(baseUrl + 'base.ejs', {parts: 'header', data: data, page: {task: task + ' table操作（行の削除）'} }) %>
+  <%- include(baseUrl + 'base.ejs', {parts: 'header', data: data, page: {task: task + ' table操作（行の並び替え）'} }) %>
 <main id="task_<%= task %>">
     <input type="search" id="zodiacSearch">
     <button type="button" id="zodiacSearchBtn">検索</button>
+    <select id="zodiacSortSelect">
+        <%
+        var selectList = [
+            'IDで昇順',
+            'IDで降順',
+            'Japaneseで昇順',
+            'Japaneseで降順',
+            'Latinで昇順',
+            'Latinで降順'
+        ];
+        selectList.forEach(function (selectVal, idx) {
+        %>
+        <option name="option_sort_<%= idx %>" value="<%= selectVal %>" <% if (idx === 0) { %>selected<% } %> ><%= selectVal %></option>
+        <% }); %>
+    </select>
     <table id="zodiacTable">
         <thead>
             <tr>
-                <th>削除</th>
                 <th>ID</th>
                 <th>Japanese</th>
                 <th>Latin</th>
@@ -25,11 +39,12 @@ var task = '13-04';
                 { id: '1', jName: '牡羊座', lName: 'Aries' },
                 { id: '2', jName: '牡牛座', lName: 'Taurus' },
                 { id: '3', jName: '双子座', lName: 'Gemini' },
-                { id: '4', jName: '獅子座', lName: 'Leo' },
-                { id: '5', jName: '乙女座', lName: 'Virgo' },
-                { id: '6', jName: '天秤座', lName: 'Libra' },
-                { id: '7', jName: '蠍座', lName: 'Scorpio' },
-                { id: '8', jName: '射手座', lName: 'Sagittatius' },
+                { id: '4', jName: '蟹座', lName: 'Leo' },
+                { id: '5', jName: '獅子座', lName: 'Virgo' },
+                { id: '6', jName: '乙女座', lName: 'Libra' },
+                { id: '7', jName: '天秤座', lName: 'Scorpio' },
+                { id: '8', jName: '蠍座', lName: 'Sagittatius' },
+                { id: '9', jName: '射手座', lName: 'Sagittatius' },
                 { id: '10', jName: '山羊座', lName: 'Capricorn' },
                 { id: '11', jName: '水瓶座', lName: 'Aquarius' },
                 { id: '12', jName: '魚座', lName: 'Pisces' }
@@ -37,7 +52,6 @@ var task = '13-04';
             tableData.forEach(function (data) {
             %>
             <tr>
-                <td><button type="button" class="zodiacRemoveBtn" data-remove="true">削除</button></td>
                 <td><%= data.id %></td>
                 <td><%= data.jName %></td>
                 <td><%= data.lName %></td>
