--- a/src/css/task.css
+++ b/src/css/task.css
@@ -220,3 +220,34 @@
 #zodiacTable .zodiacRemoveBtn:hover {
     background-color: rgba(255, 255, 255, 0.3);
 }
+/* 14 */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+}
+.popup-body {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 500px;
+    height: 500px;
+    background-color: #fff;
+}
+.popup h2 {
+    position: relative;
+}
+.popup h2 > #close {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+#popupCalendar table {
+    margin: 0 auto;
+}
